--- a/source/framChennelRSClasses.lfm
+++ b/source/framChennelRSClasses.lfm
@@ -1,9 +1,17 @@
-object frameChannelRS: TframeChannelRS
+object frameChennelRS: TframeChennelRS
   Left = 0
   Height = 240
   Top = 0
   Width = 320
-  TabOrder = 0
-  DesignLeft = 2000
-  DesignTop = 436
+  ClientHeight = 240
+  ClientWidth = 320
+  LCLVersion = '1.5'
+  object lbChennelCapt: TLabel
+    Left = 8
+    Height = 21
+    Top = 2
+    Width = 167
+    Caption = 'Последовательный канал'
+    ParentColor = False
+  end
 end
