--- a/source/framChennelTCPClasses.lfm
+++ b/source/framChennelTCPClasses.lfm
@@ -3,7 +3,17 @@ object frameChennelTCP: TframeChennelTCP
   Height = 240
   Top = 0
   Width = 320
+  ClientHeight = 240
+  ClientWidth = 320
   TabOrder = 0
   DesignLeft = 2002
   DesignTop = 154
+  object lbChennelCapt: TLabel
+    Left = 8
+    Height = 21
+    Top = 0
+    Width = 97
+    Caption = 'Сетевой канал'
+    ParentColor = False
+  end
 end
