--- a/source/formChennelTCPAdd.lfm
+++ b/source/formChennelTCPAdd.lfm
@@ -1,18 +1,19 @@
 object frmChennelTCPAdd: TfrmChennelTCPAdd
-  Left = 1945
-  Height = 236
-  Top = 254
-  Width = 320
+  Left = 2145
+  Height = 168
+  Top = 215
+  Width = 301
+  BorderIcons = []
   BorderStyle = bsDialog
   Caption = 'Добавить сетевой канал'
-  ClientHeight = 236
-  ClientWidth = 320
+  ClientHeight = 168
+  ClientWidth = 301
   Position = poOwnerFormCenter
   LCLVersion = '1.5'
   object btOk: TButton
-    Left = 146
+    Left = 127
     Height = 25
-    Top = 199
+    Top = 131
     Width = 80
     Anchors = [akRight, akBottom]
     Caption = 'Добавить'
@@ -21,12 +22,60 @@ object frmChennelTCPAdd: TfrmChennelTCPAdd
     TabOrder = 0
   end
   object btCancel: TButton
-    Left = 234
+    Left = 215
     Height = 25
-    Top = 199
+    Top = 131
     Width = 75
     Anchors = [akRight, akBottom]
     Caption = 'Отмена'
     TabOrder = 1
+  end
+  object lbName: TLabel
+    Left = 8
+    Height = 21
+    Top = 8
+    Width = 28
+    Caption = 'Имя'
+    ParentColor = False
+  end
+  object lbAddress: TLabel
+    Left = 8
+    Height = 21
+    Top = 48
+    Width = 40
+    Caption = 'Адрес'
+    ParentColor = False
+  end
+  object lbPort: TLabel
+    Left = 8
+    Height = 21
+    Top = 88
+    Width = 33
+    Caption = 'Порт'
+    ParentColor = False
+  end
+  object edName: TEdit
+    Left = 64
+    Height = 33
+    Top = 8
+    Width = 224
+    TabOrder = 2
+    Text = 'TCP канал'
+  end
+  object edAddress: TEdit
+    Left = 64
+    Height = 33
+    Top = 48
+    Width = 224
+    TabOrder = 3
+    Text = '127.0.0.1'
+  end
+  object edPort: TEdit
+    Left = 64
+    Height = 33
+    Top = 88
+    Width = 224
+    TabOrder = 4
+    Text = '502'
   end
 end
