--- a/source/framChennelTCPClasses.lfm
+++ b/source/framChennelTCPClasses.lfm
@@ -1,19 +1,79 @@
 object frameChennelTCP: TframeChennelTCP
   Left = 0
-  Height = 240
+  Height = 129
   Top = 0
-  Width = 320
-  ClientHeight = 240
-  ClientWidth = 320
+  Width = 434
+  ClientHeight = 129
+  ClientWidth = 434
   TabOrder = 0
-  DesignLeft = 2002
-  DesignTop = 154
+  DesignLeft = 3249
+  DesignTop = 547
   object lbChennelCapt: TLabel
     Left = 8
-    Height = 21
+    Height = 20
     Top = 0
-    Width = 97
-    Caption = 'Сетевой канал'
+    Width = 101
+    Caption = 'Сетевой канал:'
+    ParentColor = False
+  end
+  object btChennelStart: TButton
+    Left = 8
+    Height = 25
+    Top = 80
+    Width = 75
+    Caption = 'Открыть'
+    OnClick = btChennelStartClick
+    TabOrder = 0
+  end
+  object btChennelClose: TButton
+    Left = 149
+    Height = 25
+    Top = 80
+    Width = 75
+    Caption = 'Закрыть'
+    OnClick = btChennelCloseClick
+    TabOrder = 1
+  end
+  object lbChennelName: TLabel
+    Left = 120
+    Height = 20
+    Top = 0
+    Width = 104
+    Caption = 'lbChennelName'
+    ParentColor = False
+  end
+  object lbChennelAddress: TLabel
+    Left = 8
+    Height = 20
+    Top = 24
+    Width = 92
+    BidiMode = bdLeftToRight
+    Caption = 'Адрес канала:'
+    ParentBidiMode = False
+    ParentColor = False
+  end
+  object lbAddress: TLabel
+    Left = 120
+    Height = 20
+    Top = 24
+    Width = 64
+    Caption = 'lbAddress'
+    ParentColor = False
+  end
+  object lbChennelPort: TLabel
+    Left = 8
+    Height = 20
+    Top = 48
+    Width = 85
+    Caption = 'Порт канала:'
+    ParentColor = False
+  end
+  object lbPort: TLabel
+    Left = 120
+    Height = 20
+    Top = 48
+    Width = 40
+    Caption = 'lbPort'
     ParentColor = False
   end
 end
