--- a/source/framChennelRSClasses.lfm
+++ b/source/framChennelRSClasses.lfm
@@ -1,17 +1,133 @@
 object frameChennelRS: TframeChennelRS
   Left = 0
-  Height = 240
+  Height = 177
   Top = 0
-  Width = 320
-  ClientHeight = 240
-  ClientWidth = 320
-  LCLVersion = '1.5'
+  Width = 437
+  ClientHeight = 177
+  ClientWidth = 437
+  TabOrder = 0
+  DesignLeft = 3246
+  DesignTop = 328
   object lbChennelCapt: TLabel
     Left = 8
-    Height = 21
+    Height = 20
     Top = 2
-    Width = 167
-    Caption = 'Последовательный канал'
+    Width = 171
+    Caption = 'Последовательный канал:'
+    ParentColor = False
+  end
+  object btChennelClose: TButton
+    Left = 213
+    Height = 25
+    Top = 144
+    Width = 75
+    Caption = 'Закрыть'
+    OnClick = btChennelCloseClick
+    TabOrder = 0
+  end
+  object btChennelStart: TButton
+    Left = 8
+    Height = 25
+    Top = 144
+    Width = 75
+    Caption = 'Открыть'
+    OnClick = btChennelStartClick
+    TabOrder = 1
+  end
+  object lbChennelName: TLabel
+    Left = 184
+    Height = 20
+    Top = 2
+    Width = 104
+    Caption = 'lbChennelName'
+    ParentColor = False
+  end
+  object lbPortName: TLabel
+    Left = 8
+    Height = 20
+    Top = 24
+    Width = 37
+    Caption = 'Порт:'
+    ParentColor = False
+  end
+  object lbPort: TLabel
+    Left = 184
+    Height = 20
+    Top = 24
+    Width = 40
+    Caption = 'lbPort'
+    ParentColor = False
+  end
+  object lbParityName: TLabel
+    Left = 8
+    Height = 20
+    Top = 72
+    Width = 59
+    Caption = 'Паритет:'
+    ParentColor = False
+  end
+  object lbParity: TLabel
+    Left = 184
+    Height = 20
+    Top = 72
+    Width = 50
+    Caption = 'lbParity'
+    ParentColor = False
+  end
+  object lbBaudName: TLabel
+    Left = 8
+    Height = 20
+    Top = 48
+    Width = 66
+    Caption = 'Скорость:'
+    ParentColor = False
+  end
+  object lbBaud: TLabel
+    Left = 184
+    Height = 20
+    Top = 48
+    Width = 44
+    Caption = 'lbBaud'
+    ParentColor = False
+  end
+  object lbByteSizeName: TLabel
+    Left = 8
+    Height = 20
+    Top = 96
+    Width = 95
+    Caption = 'Рармер байта:'
+    ParentColor = False
+  end
+  object lbByteSize: TLabel
+    Left = 184
+    Height = 20
+    Top = 96
+    Width = 70
+    Caption = 'lbByteSize'
+    ParentColor = False
+  end
+  object lbBits: TLabel
+    Left = 256
+    Height = 20
+    Top = 96
+    Width = 23
+    Caption = 'бит'
+    ParentColor = False
+  end
+  object lbStopBitsName: TLabel
+    Left = 8
+    Height = 20
+    Top = 120
+    Width = 96
+    Caption = 'Стоповых бит:'
+    ParentColor = False
+  end
+  object lbStopBits: TLabel
+    Left = 184
+    Height = 20
+    Top = 120
+    Width = 68
+    Caption = 'lbStopBits'
     ParentColor = False
   end
 end
