--- a/source/main.lfm
+++ b/source/main.lfm
@@ -1,10 +1,10 @@
 object frmMain: TfrmMain
-  Left = 1020
-  Height = 585
-  Top = 211
+  Left = 2166
+  Height = 605
+  Top = 177
   Width = 900
   Caption = 'Эмулятор Modbus-slave '
-  ClientHeight = 559
+  ClientHeight = 579
   ClientWidth = 900
   Constraints.MinHeight = 585
   Constraints.MinWidth = 900
@@ -16,9 +16,13 @@ object frmMain: TfrmMain
   object StatusBar1: TStatusBar
     Left = 0
     Height = 22
-    Top = 537
+    Top = 557
     Width = 900
-    Panels = <>
+    Panels = <    
+      item
+        Width = 50
+      end>
+    SimplePanel = False
   end
   object tbMain: TToolBar
     Left = 0
@@ -135,7 +139,7 @@ object frmMain: TfrmMain
   end
   object lbDeviceList: TListBox
     Left = 0
-    Height = 511
+    Height = 531
     Top = 26
     Width = 201
     Align = alLeft
@@ -149,20 +153,20 @@ object frmMain: TfrmMain
   end
   object Splitter1: TSplitter
     Left = 201
-    Height = 511
+    Height = 531
     Top = 26
     Width = 7
   end
   object sbMainClientSpace: TScrollBox
     Left = 208
-    Height = 511
+    Height = 531
     Top = 26
     Width = 692
     HorzScrollBar.Page = 387
     VertScrollBar.Page = 240
     Align = alClient
     Anchors = [akTop, akLeft, akRight]
-    ClientHeight = 509
+    ClientHeight = 529
     ClientWidth = 690
     Constraints.MinHeight = 509
     Constraints.MinWidth = 300
@@ -170,7 +174,7 @@ object frmMain: TfrmMain
     object memLog: TMemo
       Left = -1
       Height = 240
-      Top = 269
+      Top = 289
       Width = 691
       Anchors = [akLeft, akRight, akBottom]
       OnChange = memLogChange
@@ -182,7 +186,7 @@ object frmMain: TfrmMain
       Left = 185
       Height = 28
       Hint = 'Количество строк протокола'
-      Top = 239
+      Top = 259
       Width = 120
       Anchors = [akLeft, akBottom]
       ItemHeight = 0
@@ -204,7 +208,7 @@ object frmMain: TfrmMain
     object cbLogDebug: TCheckBox
       Left = 309
       Height = 24
-      Top = 239
+      Top = 259
       Width = 81
       Anchors = [akLeft, akBottom]
       Caption = 'Отладка'
@@ -216,7 +220,7 @@ object frmMain: TfrmMain
     object cbLogInfo: TCheckBox
       Left = 391
       Height = 24
-      Top = 239
+      Top = 259
       Width = 66
       Anchors = [akLeft, akBottom]
       Caption = 'Инфо'
@@ -228,7 +232,7 @@ object frmMain: TfrmMain
     object cbLogWarn: TCheckBox
       Left = 459
       Height = 24
-      Top = 239
+      Top = 259
       Width = 142
       Anchors = [akLeft, akBottom]
       Caption = 'Предупреждения'
@@ -240,7 +244,7 @@ object frmMain: TfrmMain
     object cbLogError: TCheckBox
       Left = 603
       Height = 24
-      Top = 239
+      Top = 259
       Width = 79
       Anchors = [akLeft, akBottom]
       Caption = 'Ошибки'
@@ -252,7 +256,7 @@ object frmMain: TfrmMain
     object btLogClear: TButton
       Left = 4
       Height = 25
-      Top = 239
+      Top = 259
       Width = 75
       Action = actLogClear
       Anchors = [akLeft, akBottom]
@@ -261,7 +265,7 @@ object frmMain: TfrmMain
     object btLogSave: TButton
       Left = 88
       Height = 25
-      Top = 239
+      Top = 259
       Width = 84
       Action = actLogSave
       Anchors = [akLeft, akBottom]
@@ -319,19 +323,20 @@ object frmMain: TfrmMain
     end
     object libChennelList: TListBox
       Left = 4
-      Height = 170
+      Height = 190
       Top = 64
       Width = 220
       Anchors = [akTop, akLeft, akBottom]
       ItemHeight = 0
       OnSelectionChange = libChennelListSelectionChange
+      PopupMenu = ppmChennalOperations
       ScrollWidth = 218
       TabOrder = 13
       TopIndex = -1
     end
     object scrbChennelParams: TScrollBox
       Left = 228
-      Height = 170
+      Height = 190
       Top = 64
       Width = 454
       HorzScrollBar.Page = 1
@@ -514,5 +519,18 @@ object frmMain: TfrmMain
     Filter = 'XML файлы(*.xml)|*.xml|Все файлы(*.*)|*.*'
     left = 576
     top = 176
+  end
+  object ppmChennalOperations: TPopupMenu
+    left = 504
+    top = 96
+    object mppiOpenChennal: TMenuItem
+      Action = actChannelOpen
+    end
+    object mppiCloseChennal: TMenuItem
+      Action = actChannelClose
+    end
+    object mppiDelChennal: TMenuItem
+      Action = actChannelDel
+    end
   end
 end
