--- a/source/main.lfm
+++ b/source/main.lfm
@@ -737,6 +737,82 @@ object frmMain: TfrmMain
       end
       object mmDevEditDev: TMenuItem
         Action = actDevEdit
+        Bitmap.Data = {
+          36090000424D3609000000000000360000002800000018000000180000000100
+          2000000000000009000064000000640000000000000000000000000000000000
+          00000000000000000000000000000000000000000000020202FF000000000102
+          02FF000000000000000000000000000000000000000000000000000000000000
+          0000000000000000000000000000000000000000000000000000000000000000
+          000000000000010101FF020202FF020202FF020202FF080809FF0C1113FF0000
+          0000020202FF020303FF020303FF020202FF010202FF010101FF000000000000
+          0000000000000000000000000000000000000000000000000000000000000202
+          01FF020202FF030202FF0000000000000000000000000C1014FF3D4044FF1A2B
+          38FF03090DFF00000000000000000000000000000000010101FF020203FF0101
+          01FF000000000000000000000000000000000000000000000000030303FF0303
+          02FF0E0D0DFF3E3D38FF757169FF918B83FFA8A198FFAEA599FF74858FFF6797
+          B0FF61A6D4FF5C839FFF90918EFFA49B8FFF8E8980FF54524CFF21201EFF0A0A
+          09FF010202FF010101FF00000000000000000000000000000000030302FF4341
+          3CFF9F998FFFBBB4ABFFC7BEB6FFCFC7BEFFE0D6CEFFE6DAD1FFD3D1CFFF82BF
+          E0FFAEE1FCFF5EB0EBFF3986C7FFB8B9BBFFD5C9BDFFC1BAB0FFB3ACA2FF817C
+          74FF131211FF020202FF000000000000000000000000000000000B0B0AFFA49E
+          94FFC6BFB5FFCFC7BEFFD1C9C0FFD5CCC4FFDCD2CAFFE0D6CDFFEADCD3FF92B4
+          C8FFB5DDEFFF7AC8FEFF1292F7FF3984C3FFC3BFBAFFD6CCC1FFCCC4BAFFC0B9
+          AFFF504E49FF020203FF000000000000000000000000000000000C0B0BFFB1AA
+          A1FFC9C2B8FFCDC5BCFFD1C9C0FFD5CCC4FFDBD1C9FFDFD6CEFFE6DBD2FFCBCD
+          D4FF57A6DDFFAAE3FBFF6AC0FFFF1C9CFFFF1F79C4FFBFBCB8FFD3C8BCFFCCC3
+          BAFF58554FFF020203FF000000000000000000000000000000000C0C0BFFB0A9
+          9FFFC7BFB6FFD2CAC2FFDCD5CDFFE3DCD4FFECE6DEFFEDE6DFFFF0E8E1FFF8EE
+          E4FFC3D2DEFF5AA9E0FFA7E4FDFF6DC0FDFF1C9BFDFF3884C3FFAEAFB0FFCFC4
+          B8FF59554FFF020203FF000000000000000000000000000000000C0B0BFFB4AE
+          A3FFE2DCD4FFE5DFD8FFD7D0C8FFCBC4BCFFC6BFB6FFC6BDB5FFC8BFB7FFCBC2
+          B9FFCDC2B8FFAAAAAEFF4BA0DEFFA7E4FDFF6ABFFDFF1494F8FF3883C1FFBFBB
+          B7FF5B574FFF020303FF000000000000000000000000000000000A0A09FFB6AF
+          A6FFC2B9B0FFB0A79CFFBBB2A9FFC8BDB5FFD5CBC3FFDED4CBFFE6DCD5FFECE1
+          DAFFEBE0D9FFEADDD4FFC5C5C9FF58A5DBFFACE3FBFF6AC0FFFF1C9CFFFF217C
+          C6FF585856FF050506FF020202FF000000000000000000000000080807FF8A84
+          7BFFBCB5AAFFCDC5BCFFD2C9C0FFD6CDC4FFDCD3CBFFDFD5CDFFE3D9D2FFEADE
+          D7FFE7DCD5FFE4DAD2FFE3D6CBFFB3BBC5FF58A4DAFFA8E5FFFF6DC0FDFF1D9C
+          FDFF20649CFF060B0FFF040506FF010101FF00000000000000000B0B0AFFAAA2
+          99FFC9C2B8FFCEC6BDFFD2C9C0FFD6CDC5FFDCD2CAFFE0D6CEFFE4DAD3FFE9DE
+          D7FFE8DDD6FFE4DAD2FFDFD5CCFFDFD2C7FFBEBFC2FF4BA1DFFFA9E5FFFF6AC0
+          FFFF1696F9FF1E66A0FF03070BFF040405FF010101FF000000000D0C0BFFB3AC
+          A2FFC7C0B6FFCFC7BEFFD5CDC5FFDBD3CBFFE3DBD3FFE5DDD5FFE9DFD8FFEEE4
+          DDFFEBE2DBFFE9E0D9FFE3DCD4FFE0D7CFFFDFD3C9FFBCBFC1FF57A3D9FFAAE2
+          FAFF6AC0F8FF618EAEFF7D7871FF070807FF040405FF020202FF0C0C0BFFB5AE
+          A4FFD9D2CAFFE1DAD3FFDDD7CFFFD9D2CAFFD9D3CAFFD8D1C9FFD9D2CBFFDBD5
+          CCFFDAD3CBFFDAD3CBFFD8D1CAFFD8D1C9FFDCD5CDFFE5DCD0FFBBC6D1FF57A8
+          DFFFC7CDCCFFBCB6B2FF908F8CFF626061FF0F0A14FF030304FF0C0B0AFFC4BD
+          B4FFCEC7BFFFB7AFA5FFB9B1A8FFC0B6ADFFCAC1B8FFD0C6BDFFD9CFC8FFE0D5
+          CDFFDED3CBFFDBD0C8FFCDC3BBFFC9BFB7FFC2B9B0FFBDB5ACFFC3B9AEFFC0C9
+          CFFFB7B1AEFFDCDBD8FF9EA19AFFB686B6FF855C99FF070509FF080807FF8B85
+          7DFFB9B1A6FFCCC4BBFFD4CBC2FFD7CEC6FFDDD3CBFFE0D7CFFFE5DBD3FFEADF
+          D8FFE9DED7FFE4DAD3FFDFD5CDFFDBD1C9FFD7CEC5FFD2CAC1FFC9C1B8FFBBB2
+          A8FF5C5953FF7F797EFFCFA2CEFFCE98CDFF9670A9FF19181FFF0A0A09FFA19A
+          91FFC6BFB5FFCEC6BDFFD1C8BFFFD5CCC3FFDBD2CAFFDED5CDFFE3D9D1FFE9DE
+          D7FFE7DCD5FFE3D9D2FFDDD3CBFFD8CFC7FFD4CBC2FFD0C8BFFFCBC3BAFFC4BC
+          B3FF4B4841FF1B161DFFB188B9FFA680B2FF25232CFF000000000D0C0CFFB6AE
+          A5FFC7C0B7FFCCC4BBFFCFC6BDFFD3C9C1FFDACFC7FFDDD3CBFFE1D7D0FFE8DD
+          D6FFE6DBD4FFE2D8D0FFDBD2CAFFD7CDC5FFD3C9C0FFCFC6BDFFCAC2B9FFC9C0
+          B8FF5F5B54FF040404FF201E22FF1E1D21FF00000000000000000D0D0BFFB8B0
+          A5FFD0C9BFFFE0D9D1FFEBE4DCFFEEE8E1FFF3EFE7FFF2EDE6FFF2ECE5FFF2ED
+          E5FFF2ECE5FFF2EDE6FFF3EDE6FFF1EBE5FFEEE8E0FFE5DFD6FFD8D1C9FFCCC3
+          BBFF5F5B55FF030303FF000000000000000000000000000000000D0C0BFFC5BF
+          B5FFEDE8E0FFE7DFD8FFDDD5CCFFD8CFC6FFD2CAC0FFD0C7BDFFD0C7BDFFD1C8
+          BFFFD0C7BDFFD1C8BFFFD0C7BEFFD4CBC2FFD9D1C8FFE4DCD4FFEAE4DCFFE7E2
+          DAFF615D56FF040303FF000000000000000000000000000000000D0C0BFFCAC3
+          BAFFDED6CDFFD4CBC1FFD3CABFFFD3CAC0FFD5CCC1FFD3CAC0FFD3CAC0FFD5CC
+          C2FFD3CAC0FFD5CCC2FFD3CAC0FFD3CAC0FFD3CABFFFD4CAC0FFD6CDC3FFEAE3
+          DBFF605C55FF040303FF00000000000000000000000000000000141312FFB7AF
+          A4FFDDD3C9FFE0D8CDFFDFD6CCFFDFD6CCFFDFD6CCFFDED6CCFFDED6CCFFDFD6
+          CCFFDED6CCFFDFD6CCFFDED6CCFFDFD6CCFFDFD6CCFFE0D7CDFFE0D7CDFFD8CE
+          C4FF615D56FF020202FF00000000000000000000000000000000111110FF635E
+          58FFB3ABA0FFD2C9BEFFDAD2C7FFDFD7CDFFEAE2D8FFE8E0D6FFE8E0D6FFEAE2
+          D8FFE8E0D6FFEAE2D8FFE9E1D7FFE4DCD2FFDED6CCFFD5CDC2FFC9C1B6FF938D
+          84FF312F2DFF0000000000000000000000000000000000000000000000000D0C
+          0CFF2A2826FF4E4B45FF857F77FFA39C92FFBBB3A8FFBAB2A6FFBAB2A6FFBBB3
+          A8FFBAB2A6FFBBB3A8FFBAB2A7FFB0A89EFF9F988EFF645F59FF3B3935FF1F1E
+          1CFF000000000000000000000000000000000000000000000000
+        }
       end
       object mmDevView: TMenuItem
         Action = actDevView
