--- a/source/DeviceView.lfm
+++ b/source/DeviceView.lfm
@@ -1,11 +1,11 @@
 object frmDeviceView: TfrmDeviceView
-  Left = 2102
-  Height = 495
-  Top = 227
-  Width = 967
+  Left = 2008
+  Height = 754
+  Top = 115
+  Width = 681
   Caption = 'Просмотр устройства'
-  ClientHeight = 495
-  ClientWidth = 967
+  ClientHeight = 754
+  ClientWidth = 681
   Position = poDesktopCenter
   LCLVersion = '1.5'
   object lbDevNum: TLabel
@@ -23,5 +23,170 @@ object frmDeviceView: TfrmDeviceView
     Width = 107
     Caption = 'lbDeviceNumber'
     ParentColor = False
+  end
+  object pcDeviceRegisters: TPageControl
+    Left = 8
+    Height = 705
+    Top = 40
+    Width = 664
+    ActivePage = tsHoldings
+    TabIndex = 2
+    TabOrder = 0
+    object tsCoils: TTabSheet
+      Caption = 'Coils'
+      ClientHeight = 671
+      ClientWidth = 654
+      object sgCoils: TStringGrid
+        Left = 1
+        Height = 547
+        Top = 121
+        Width = 653
+        ColCount = 4
+        DefaultRowHeight = 25
+        Options = [goFixedVertLine, goFixedHorzLine, goVertLine, goHorzLine, goRowSelect, goSmoothScroll]
+        RangeSelectMode = rsmMulti
+        RowCount = 1
+        TabOrder = 0
+        TitleStyle = tsNative
+        ColWidths = (
+          61
+          119
+          104
+          366
+        )
+        Cells = (
+          4
+          0
+          0
+          'Адрес'
+          1
+          0
+          'Значение'
+          2
+          0
+          'Hex'
+          3
+          0
+          'Коментарий'
+        )
+      end
+    end
+    object tsDiscrets: TTabSheet
+      Caption = 'Discrets'
+      ClientHeight = 671
+      ClientWidth = 654
+      object sgDiscrets: TStringGrid
+        Left = 1
+        Height = 547
+        Top = 121
+        Width = 653
+        ColCount = 4
+        DefaultRowHeight = 25
+        Options = [goFixedVertLine, goFixedHorzLine, goVertLine, goHorzLine, goRowSelect, goSmoothScroll]
+        RangeSelectMode = rsmMulti
+        RowCount = 1
+        TabOrder = 0
+        TitleStyle = tsNative
+        ColWidths = (
+          61
+          119
+          104
+          366
+        )
+        Cells = (
+          4
+          0
+          0
+          'Адрес'
+          1
+          0
+          'Значение'
+          2
+          0
+          'Hex'
+          3
+          0
+          'Коментарий'
+        )
+      end
+    end
+    object tsHoldings: TTabSheet
+      Caption = 'Holdings'
+      ClientHeight = 671
+      ClientWidth = 654
+      object sgHoldings: TStringGrid
+        Left = 1
+        Height = 547
+        Top = 120
+        Width = 653
+        ColCount = 4
+        DefaultRowHeight = 25
+        Options = [goFixedVertLine, goFixedHorzLine, goVertLine, goHorzLine, goRowSelect, goSmoothScroll]
+        RangeSelectMode = rsmMulti
+        RowCount = 1
+        TabOrder = 0
+        TitleStyle = tsNative
+        ColWidths = (
+          61
+          119
+          104
+          366
+        )
+        Cells = (
+          4
+          0
+          0
+          'Адрес'
+          1
+          0
+          'Значение'
+          2
+          0
+          'Hex'
+          3
+          0
+          'Коментарий'
+        )
+      end
+    end
+    object tsInputs: TTabSheet
+      Caption = 'Inputs'
+      ClientHeight = 671
+      ClientWidth = 654
+      object sgInputs: TStringGrid
+        Left = 1
+        Height = 547
+        Top = 124
+        Width = 653
+        ColCount = 4
+        DefaultRowHeight = 25
+        Options = [goFixedVertLine, goFixedHorzLine, goVertLine, goHorzLine, goRowSelect, goSmoothScroll]
+        RangeSelectMode = rsmMulti
+        RowCount = 1
+        TabOrder = 0
+        TitleStyle = tsNative
+        ColWidths = (
+          61
+          119
+          104
+          366
+        )
+        Cells = (
+          4
+          0
+          0
+          'Адрес'
+          1
+          0
+          'Значение'
+          2
+          0
+          'Hex'
+          3
+          0
+          'Коментарий'
+        )
+      end
+    end
   end
 end
