--- a/source/DeviceView.lfm
+++ b/source/DeviceView.lfm
@@ -6,6 +6,7 @@ object frmDeviceView: TfrmDeviceView
   Caption = 'Просмотр устройства'
   ClientHeight = 754
   ClientWidth = 681
+  OnClose = FormClose
   Position = poDesktopCenter
   LCLVersion = '1.5'
   object lbDevNum: TLabel
@@ -29,8 +30,8 @@ object frmDeviceView: TfrmDeviceView
     Height = 705
     Top = 40
     Width = 664
-    ActivePage = tsHoldings
-    TabIndex = 2
+    ActivePage = tsCoils
+    TabIndex = 0
     TabOrder = 0
     object tsCoils: TTabSheet
       Caption = 'Coils'
@@ -41,7 +42,7 @@ object frmDeviceView: TfrmDeviceView
         Height = 547
         Top = 121
         Width = 653
-        ColCount = 4
+        ColCount = 3
         DefaultRowHeight = 25
         Options = [goFixedVertLine, goFixedHorzLine, goVertLine, goHorzLine, goRowSelect, goSmoothScroll]
         RangeSelectMode = rsmMulti
@@ -51,11 +52,10 @@ object frmDeviceView: TfrmDeviceView
         ColWidths = (
           61
           119
-          104
-          366
+          471
         )
         Cells = (
-          4
+          3
           0
           0
           'Адрес'
@@ -63,9 +63,6 @@ object frmDeviceView: TfrmDeviceView
           0
           'Значение'
           2
-          0
-          'Hex'
-          3
           0
           'Коментарий'
         )
@@ -80,7 +77,7 @@ object frmDeviceView: TfrmDeviceView
         Height = 547
         Top = 121
         Width = 653
-        ColCount = 4
+        ColCount = 3
         DefaultRowHeight = 25
         Options = [goFixedVertLine, goFixedHorzLine, goVertLine, goHorzLine, goRowSelect, goSmoothScroll]
         RangeSelectMode = rsmMulti
@@ -90,11 +87,10 @@ object frmDeviceView: TfrmDeviceView
         ColWidths = (
           61
           119
-          104
-          366
+          472
         )
         Cells = (
-          4
+          3
           0
           0
           'Адрес'
@@ -102,9 +98,6 @@ object frmDeviceView: TfrmDeviceView
           0
           'Значение'
           2
-          0
-          'Hex'
-          3
           0
           'Коментарий'
         )
@@ -188,5 +181,14 @@ object frmDeviceView: TfrmDeviceView
         )
       end
     end
+  end
+  object btTestDevView: TButton
+    Left = 481
+    Height = 25
+    Top = 8
+    Width = 135
+    Caption = 'btTestDevView'
+    OnClick = btTestDevViewClick
+    TabOrder = 1
   end
 end
